feat: track application from main branch

--- a/platform/gitops/local.yaml
+++ b/platform/gitops/local.yaml
@@ -8,7 +8,7 @@ spec:
 
   source:
     repoURL: 'https://github.com/plasterinho/ops-journal.git'
-    targetRevision: week3-repo-v2
+    targetRevision: main
     path: environments/local
 
   destination:
