--- a/workloads/ops-journal/overlays/dev/kustomization.yaml
+++ b/workloads/ops-journal/overlays/dev/kustomization.yaml
@@ -5,5 +5,6 @@ patches:
   - path: replicas.yaml
 
 images:
-  - name: ops-journal
-    newTag: "0.2"
+  - name: ghcr.io/plasterinho/ops-journal
+    newTag: "sha-cefdfba"
+    pullPolicy: Always
