fix: use full image name in overlay

--- a/workloads/ops-journal/overlays/dev/kustomization.yaml
+++ b/workloads/ops-journal/overlays/dev/kustomization.yaml
@@ -5,5 +5,5 @@ patches:
   - path: replicas.yaml
 
 images:
-  - name: ops-journal
-    newTag: "sha-cefdfba"
+  - name: ghcr.io/plasterinho/ops-journal
+    newTag: sha-cefdfba
