--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,21 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+      
+      - name: Update image tag in kustomization
+        if: github.actor != 'github-actions[bot]'
+        run: |
+          SHORT_SHA=${GITHUB_SHA::7}
+          IMAGE_TAG="sha=${SHORT_SHA}"
+
+          sed -i "s/newTag: .*/newTag: ${IMAGE_TAG}/" workloads/ops-journal/overlays/dev/kustomization.yaml
+
+      - name: Commit and Push updated tag
+        if: github.actor != 'github-actions[bot]'
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+          git add workloads/ops-journal/overlays/dev/kustomization.yaml
+          git commit -m "chore: deploy ${IMAGE_TAG}" || exit 0
+          git push
