--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,15 @@ jobs:
         if: github.actor != 'github-actions[bot]'
         run: |
           SHORT_SHA=${GITHUB_SHA::7}
-          IMAGE_TAG="sha=${SHORT_SHA}"
+          IMAGE_TAG="sha-${SHORT_SHA}"
 
           sed -i "s/newTag: .*/newTag: ${IMAGE_TAG}/" workloads/ops-journal/overlays/dev/kustomization.yaml
 
       - name: Commit and Push updated tag
         if: github.actor != 'github-actions[bot]'
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
 
           git add workloads/ops-journal/overlays/dev/kustomization.yaml
           git commit -m "chore: deploy ${IMAGE_TAG}" || exit 0
